# professional-portfolio

./: .gitignore  1st-try-git.cabal  README.md  debug.sh  deploy.sh  professional-portfolio.cabal  replace-author
app/: Main.hs
css/: style.css
lessons/: computing-workshop.md  gilded-age-labour.md  jacques-cartier.md
pages/: aboutme.md  comp-sci.md  consent-form.md  consent-form.md~  contact.md  future-pd.md  history.md  home.html  music-blog.md  music-blog.md~  music.md  pc-1.md  pc-10.md  pc-11.md  pc-12.md  pc-2.md  pc-3.md  pc-4.md  pc-5.md  pc-6.md  pc-7.md  pc-8.md  pc-9.md  pc.md  pgp-public-key.md  research-notes.md  subjects.md  teaching-philosophy.md  waveform-answers.md  waveform-id.md
pdf/: participant-consent-form.docx
posts/: #2020-10-06-early-steps.md#  2020-09-30-first-post.md  2020-09-30-first-post.md~  2020-10-02-first-post.md  2020-10-19-the-why.md  2020-10-19-the-why.md~  2020-12-31-the-playlist.md  2021-03-14-blog-plan.md
templates/: default.html  tag.html
