name:                professional-portfolio
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fmaj9b5/professional-portfolio#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable professional-portfolio-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hakyll
                     , pandoc
                     , filepath
                     , text
                     , unordered-containers
                     , containers
                     , aeson
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fmaj9b5/professional-portfolio
